<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.inicio.MapaInicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_nav_detalleInmueble"
            app:destination="@id/nav_detalleInmueble" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_nav_detalleInquilino"
            app:destination="@id/nav_detalleInquilino" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/nav_detalleContrato" />
    </fragment>
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />
    <fragment
        android:id="@+id/nav_detalleInmueble"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.inmuebles.DetalleInmuebleFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_detalle_inmueble" />
    <fragment
        android:id="@+id/nav_detalleInquilino"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.inquilinos.DetalleInquilinoFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_detalle_inquilino" />
    <fragment
        android:id="@+id/nav_detalleContrato"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.contratos.DetalleContratoFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_nav_detalleContrato_to_detallePagosFragment"
            app:destination="@id/nav_detallePagos" />
    </fragment>
    <fragment
        android:id="@+id/nav_detallePagos"
        android:name="com.gonzalez.inombiliarialavanda.Menu.ui.contratos.DetallePagosFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_detalle_pagos" />
</navigation>